<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

    <Preference
        android:title="@string/send_feedback"
        android:key="@string/key_send_feedback" />

    <CheckBoxPreference
        android:title="@string/show_notification"
        android:defaultValue="true"
        android:summaryOn= "@string/pref_show_notification_summary"
        android:summaryOff="@string/pref_dont_show_notification_summary"
        android:key="checkboxPref" />

    <Preference
        android:title="@string/send_notification"
        android:key="@string/key_send_notification" />
</PreferenceScreen>

